--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -35,6 +35,7 @@ Legend:
    (#) XML cache file deletion of non-existent files (Issue #853)
    (#) Bug #849 - Calling non existing SEF url causes 500 internal server error
    (#) Bug #855 - Field aliases are not lowercased
+   (#) The SobiPro.Ready JavaScript method is not being called in when format is set to 'html' (Issue #844)
 
    (-) Image field not storing temporary data any longer while using ajax uploader
    (-) Automatic upload of files in file uploader
