--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
@@ -34,3 +34,4 @@ SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories"
 SP.JS_ATTENTION="Attention!"
 SP.JS_CONFIRM_DELETE_ENTRY="Are you sure you want to delete this entry?"
 SP.JS_CONFIRM_URL_COUNT_RESET="Are you sure you want to reset the counter?"
+SP.JS_SELECT_CAT_WITH_NO_CHILDS="You cannot add an entry to a parent category. Please select a category which has no subcategories"
