--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -37,6 +37,7 @@ Legend:
    (#) Bug #855 - Field aliases are not lowercased
    (#) The SobiPro.Ready JavaScript method is not being called in when format is set to 'html' (Issue #844)
    (#) Bug #839 "Parent Category selectable" does not work for SigsiuTree method
+   (#) Bug #846 Search function access level "No Access" for public
 
    (-) Image field not storing temporary data any longer while using ajax uploader
    (-) Automatic upload of files in file uploader
