warning about temp cache creation

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -20,6 +20,8 @@
 ; $Author$
 ; $HeadURL$
 
+SP.CANNOT_CREATE_CACHE_DIRECTORY="Cannot create temporary directory for cache!"
+
 ;=========
 ; SobiPro 1.1
 ;=========
