--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -20,11 +20,11 @@
 ; $Author$
 ; $HeadURL$
 
-SP.CANNOT_CREATE_CACHE_DIRECTORY="Cannot create temporary directory for cache!"
 
 ;=========
 ; SobiPro 1.1
 ;=========
+SP.CANNOT_CREATE_CACHE_DIRECTORY="Cannot create temporary cache directory!"
 SP.CANNOT_UPLOAD_FILE_TO="Cannot upload file to %s."
 SP.CANNOT_CREATE_DIR="Cannot create directory at %s."
 SP.FILTER_NOT_FOUND="Filter cannot be found."
@@ -39,21 +39,9 @@ SP.SCHEME_ERR="An error has occurred and the repository at %s could not be added
 SP.PACKAGE_ERR="An error has occurred. No package name received."
 SP.UNKNOWN_ERR="Unknown error occurred."
 
-;=========
-; SobiPro 1.0.1
-;=========
 SP.PAGE_NOT_FOUND="Page Not Found!"
-
-;=========
-; SobiPro 1.0 RC4
-;=========
 SP.ERRMSG.MEMLIMIT_LIMITED_ENTRIES="The number of displayed entries has been limited to %d due to memory limit."
-
-;=========
-; SobiPro 1.0 RC2
-;=========
 SP.CANNOT_INSTALL_EXT_MISSING="Cannot install extension. This extension requires %s %s."
-
 
 SP.ATTR_DOES_NOT_EXISTS="The attribute %s does not exist"
 SP.CALL_TO_UNDEFINED_CLASS_METHOD="Call to undefined method %s->%s"
@@ -167,7 +155,7 @@ SP.NOT_ENOUGH_PARAMETERS="Not enough parameters"
 SP.SITE_NOT_FOUND_MISSING_PARAMS="Site not found. Missing parameters"
 SP.SUCH_TASK_NOT_FOUND="Task not found: %s."
 SP.TASK_NOT_FOUND_WRONG_CLASS="Task not found: %s. Wrong class definition"
-SP.TEMPLATE_DOES_NOT_EXISTS="Template: %s does not exists"
+SP.TEMPLATE_DOES_NOT_EXISTS="Template %s does not exist!"
 SP.TEMPLATE_INST_DUPLICATE="A template with the id '%s' is already installed. Please remove it first"
 SP.THERE_IS_NO_SUCH_FIELD="There is no field with this id '%s'"
 SP.UNAUTHORIZED_ACCESS_TASK="Unauthorized Access Task: %s."
