--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -40,6 +40,7 @@ Legend:
    (#) The SobiPro.Ready JavaScript method is not being called in when format is set to 'html' (Issue #844)
    (#) Bug #839 "Parent Category selectable" does not work for SigsiuTree method
    (#) Bug #846 Search function access level "No Access" for public
+   (#) Bug #858 SPHtml_Input::radioList does not accept '0' as label
 
    (-) Image field not storing temporary data any longer while using ajax uploader
    (-) Automatic upload of files in file uploader
