--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -25,10 +25,9 @@
 ; SobiPro 1.1.0
 ;=========
 
+; Joomla! Menu (J 1.5)
 SP.SOBI_SELECT_SECTION="Select Section"
 SOBI_SELECT_SECTION="Select Section"
-
-; Joomla! Menu (J 1.5)
 SP.SOBI_SECTION="Section, Category or Entry"
 SP.SOBI_SECTION_EXPL="Displays a section, category or entry."
 SP.SOBI_SEARCH="Search"
@@ -172,7 +171,7 @@ SP.FMN.STATE_CHANGE_NO_ID="Please select field(s) from the list first!"
 SP.NEW_FIELDS_ORDERING_HAS_BEEN_SAVED="New fields ordering has been saved."
 SP.FM.STATE_CHANGED="State of field var:[fid] has been changed. "
 SP.FM.STATE_NOT_CHANGED="State of field var:[fid] cannot be changed. "
-SP.FM.EDIT_FIELD="Edit field &#34;var:[field]&#34;"
+SP.FM.EDIT_FIELD="Edit field 'var:[field]'"
 SP.FM.FIELD_PARAMETERS="Field Parameters"
 SP.FM.AVAILABLE_IN="Available in"
 SP.FM.BOTH_OPT="Both"
@@ -256,7 +255,7 @@ SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_SINGLE_CHOICE_RADIO="Radio buttons"
 
 ; Fields
 SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option Ids are used several times; a random option Id has been generated."
-SP.FM.ADD_FIELD="Add new &#34;var:[field_type]&#34; field"
+SP.FM.ADD_FIELD="Add new 'var:[field_type]' field"
 SP.FMN.FIELD_GENERAL="General Field Settings"
 SP.FMN.FIELD_GENERAL_URL="URL Settings"
 SP.FMN.FIELD_GENERAL_EMAIL="Email Settings"
@@ -396,7 +395,7 @@ SP.CATN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.CATN.ORDER_BY_ORDER_DESC="Position descending"
 
 ;; Edit Entry
-SP.EDIT_EXISTING_ENTRY="Edit Entry &#34;var:[entry.name]&#34;"
+SP.EDIT_EXISTING_ENTRY="Edit Entry 'var:[entry.name]'"
 SP.EN.ENTRY_GENERAL_DATA="General Data"
 SP.EN.BASE_DATA="Entry Data"
 SP.EN.ENTRY_PUBLISHING="Publishing"
@@ -405,7 +404,7 @@ SP.ENTRY.CHECKED_OUT="Entry is being edited"
 
 ;; Edit Category
 SP.CAT.CATEGORY_GENERAL_DATA="General Data"
-SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category.name]&#34;"
+SP.EDIT_EXISTING_CATEGORY="Edit Category 'var:[category.name]'"
 SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
 SP.CAT.CATEGORY_SAVE_SELECTION="Save Selection"
 SP.CATN.CATEGORY_DESCRIPTION="Description"
@@ -525,11 +524,11 @@ SP.SECN.CFG.REDIRECTS_SECTION_SPACER="Section Main View"
 SP.SECN.CFG.REDIRECTS_SEARCH_SPACER="Search Form"
 SP.SECN.CFG.REDIRECTS_INPUT="Entry Input Form"
 SP.SECN.CFG.REDIRECTS_SAVE="Save Entry Input"
-SP.SECN.CFG.REDIRECT_ENTRY_INFO="Please notice that this redirection will work only if:  <ul><li>the entry is a new entry</li><li>there is no payment page after the new entry has been added</li><li>the entry is not published automatically</li><li>and the particular user has no permission to see unpublished entries</li></ul>This means, only if a free entry is added from a user which have no rights to see unpublished entries and the entry is not automatically published, this redirection will work. In all other cases it cannot work as it would destroy the necessary sequence."
+SP.SECN.CFG.REDIRECT_ENTRY_INFO="Please notice that this redirection will work only if: <ul><li>the entry is a new entry</li><li>there is no payment page after the new entry has been added</li><li>the entry is not published automatically</li><li>and the particular user has no permission to see unpublished entries</li></ul>This means, only if a free entry is added from a user which have no rights to see unpublished entries and the entry is not automatically published, this redirection will work. In all other cases it cannot work as it would destroy the necessary sequence."
 SP.SEC.CFG.REDIRECTS_TO_PARENT_CATEGORY="Redirect to parent category"
 SP.SEC.CFG.ALLOWED_TAGS="Allowed Tags"
 SP.SEC.CFG.ALLOWED_ATTRIBUTES="Allowed Attributes"
-SP.SEC.CFG.CONFIGURATION_OF_SECTION="Configuration of Section &#34;var:[section]&#34;"
+SP.SEC.CFG.CONFIGURATION_OF_SECTION="Configuration of Section 'var:[section]'"
 SP.SEC.CFG.ENTRY_TITLE_FIELD_SELECT="Select Field"
 SP.SEC.CFG.ENTRY_ORDER_BY_FIELDS="Fields"
 SP.SEC.CFG.REDIRECTS="Redirects"
@@ -597,7 +596,7 @@ SP.GB.CFG.LANG="Language Settings"
 SP.GB.CFG.MULTILANG="Multi-Language Mode"
 SP.GB.CFG.GENERAL="General"
 SP.GB.CFG.CACHE="Cache"
-SP.GB.CFG.PBY_HEAD="&#34;Powered by&#34; Link"
+SP.GB.CFG.PBY_HEAD="'Powered by' Link"
 SP.GB.CFG.PBY_EXPL="<div class='PoweredByDonate'>If you disable the 'powered by' Link from our component, it is fair to donate for the component.<br /><br />Developing and maintaining SobiPro is a lot of work which should be recompensed adequately.<br />Click on the donate button below to donate via Paypal.<br /><br /><a href='http://sobi.it/SobiPro/Donate/' title='Donate for SobiPro' target='_blank'><img src='var:[image]' alt='Donate for SobiPro via Paypal' title='Donate for SobiPro via Paypal' border='0'/></a><br /><br />Thank you.<br /><br />"
 SP.GB.CFG.ALLOWED_TAGS="Allowed Tags"
 SP.GB.CFG.ALLOWED_ATTRIBUTES="Allowed Attributes"
@@ -741,7 +740,7 @@ SP.EX.SELECT_EXT_FROM_LIST="Please select an application from the list first."
 SP.EX.CONNECTING_TO_REPO_NAME="Connecting to repository var:[repo]"
 SP.EX.SENDING_REQUEST_TO="Sending request to var:[repo]."
 SP.EX.REPO_FEEDBACK_REQ="Feedback Requested"
-SP.EX.REC_PACKAGE_WITH_TYPE_NAME="Receiving package with var:[type] &#34;var:[name]&#34;"
+SP.EX.REC_PACKAGE_WITH_TYPE_NAME="Receiving package with var:[type] 'var:[name]'"
 SP.EX.PARSING_RESPONSE="Parsing response"
 SP.EX.EXAMINING_CHECKSUM="Storing package and examining the checksum"
 SP.EX.CHECKSUM_NOK="File checksum does not match the given one. Installation failed."
@@ -753,7 +752,7 @@ SP.EX.FETCHING_FROM_REPO_D_D="Fetching list from repository var:[num]/var:[from]
 SP.EX.FETCHED_LIST_FROM_REPOSITORY="Fetched list with var:[count] applications from repository var:[num]/var:[from]"
 SP.EX.FETCHED_D_EXTENSIONS="Fetched var:[count] applications"
 SP.EX.EXT_LIST_UPDATED="Applications list has been updated."
-SP.EX.MSG_UPDATE_FIRST="The list of available applications is empty at the moment. Hit the &#34;Fetch Updates&#34; button to refresh the list."
+SP.EX.MSG_UPDATE_FIRST="The list of available applications is empty at the moment. Hit the 'Fetch Updates' button to refresh the list."
 SP.EX.SELECT_TO_DELETE_ERR="Select an application to delete from the list first!"
 SP.EX.CANNOT_LOAD_PLUGIN_DEF_ERR="Cannot load application definition file - aborted."
 SP.EX.CANNOT_CHANGE_STATE_ERR="Cannot change state of the selected application."
@@ -763,8 +762,8 @@ SP.EX.REPOSITORY_DELETED="Repository has been deleted."
 SP.EX.PAYMENT_METHOD_TYPE="payment method"
 SP.EX.FIELD_TYPE="field"
 SP.EX.PLUGIN_TYPE="application"
-SP.EX.EXTENSION_HAS_BEEN_INSTALLED="New var:[type] &#34;var:[name]&#34; has been installed."
-SP.EX.EXTENSION_HAS_BEEN_REMOVED="var:[type] &#34;var:[name]&#34; has been removed."
+SP.EX.EXTENSION_HAS_BEEN_INSTALLED="New var:[type] 'var:[name]' has been installed."
+SP.EX.EXTENSION_HAS_BEEN_REMOVED="var:[type] 'var:[name]' has been removed."
 SP.EXTENSIONS.HEADER_PID="Id"
 SP.EXTENSIONS.HEADER_VERSION="Version"
 SP.EXTENSIONS.HEADER_AUTHOR="Author"
@@ -798,7 +797,7 @@ SP.AMN.APPS_HEAD="Applications"
 SP.AMN.APPS_SECTION_HEAD="Section Applications"
 SP.AMN.APPS_SECTION_TPL="Section Template"
 SP.AMN.APPS="Applications"
-SP.EX.SECTION_EXPL="You can activate or deactivate here applications listed below for the &#34;var:[section]&#34; section."
+SP.EX.SECTION_EXPL="You can activate or deactivate here applications listed below for the 'var:[section]' section."
 SP.UPD.UPDATE_AVAILABLE="New version %s is available"
 SP.UPD.UP_TO_DATE="Current version is up to date"
 SP.APP.BANK_TRANSFER="Offline Payment"
@@ -838,14 +837,14 @@ SP.ACL.AFFECTED_USER_GROUPS="Affected User Groups"
 SP.ACL.AFFECTED_SECTIONS="Affected Sections"
 SP.ACL.FRONTEND_PERMISSIONS="Frontend Permissions"
 SP.ACL.BACKEND_PERMISSIONS="Backend Permissions"
-SP.ACL.FORM_SITE_TITLE_EDIT="Editing ACL rule &#34;var:[rule]&#34; "
+SP.ACL.FORM_SITE_TITLE_EDIT="Editing ACL rule 'var:[rule]' "
 SP.ACL.JS_MSG_DELETE_ACL_RULE="Are you sure you want to delete this rule?"
 SP.ACL="Access Control List"
 SP.ACL.REG_VISITOR="Regular Visitor (unregistered)"
 SP.ACL.HEADER_NAME="Rule Name"
 SP.ACL.FORM_SITE_TITLE_ADD="Add new ACL rule "
 SP.ACL.STATE_HEAD="State"
-SP.ACL_FORM_SITE_TITLE_EDIT="ACL - Edit Rule &#34;var:[rule]&#34;"
+SP.ACL_FORM_SITE_TITLE_EDIT="ACL - Edit Rule 'var:[rule]'"
 SP.ACL_FORM_SITE_TITLE_ADD="ACL - Add new Rule"
 SP.PERMISSIONS.ACCESS_*="access any"
 SP.PERMISSIONS.ACCESS_VALID="access any valid"
@@ -883,7 +882,7 @@ SP.TP.MISSING_DEFINITION_FILE="Missing template definition file"
 SP.TP.FILE_SAVED="File has been saved!"
 SP.TP.CANNOT_SAVE="Cannot save file!"
 SP.TP.EDIT_SITE_TITLE="Edit Template File: var:[path]"
-SP.TP.INFO_SITE_TITLE="Template &#34;var:[template]&#34;"
+SP.TP.INFO_SITE_TITLE="Template 'var:[template]'"
 SP.TP.INFO="Template Information"
 SP.TP.TEMPLATE_NAME="Template Name"
 SP.TP.TEMPLATES_OVERRIDE="Templates Override"
