--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -28,10 +28,10 @@ SP.JS_PROGRESS_WORKING="Working ..."
 SP.JS_PROGRESS_DONE_REDIRECTING="All done. Please wait - refreshing page..."
 SP.JS_ACL_NONREG_ADM_WARN="Are you sure that you want to give administrative permissions to an un-registered user?"
 SP.JS_SAVE_AS_TEMPL_FILE="Name of the new file"
-SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields"
-SP.JS_CLONE_TEMPL="Please enter a new name for the new template"
+SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields!"
+SP.JS_CLONE_TEMPL="Please enter a new name for the new template."
 SP.JS_ADD_ENTRY_FIELD_REQUIRED="$field is required. Please fill in all required fields."
-SP.JS_RED_HIGHLIGHTED_FIELD="Red highlighted field"
+SP.JS_RED_HIGHLIGHTED_FIELD="Highlighted field"
 SP.JS_CONNECTION_TIMED_OUT="Connection timed out."
 SP.JS_DONE="Done!"
 SP.JS_REQUIREMENT_ERR="Really sorry, but your server does not meet the minimum requirements to use the SobiPro component.{newline}Please view the SobiPro documentation to see what may need to be done to update your server or simply uninstall this component."
@@ -41,15 +41,15 @@ SP.JS_REQUIREMENT_READ_PLEASE="Wow. You read the whole list in about %d seconds!
 SP.JS_TOO_LONG_ANSWER_LIMIT_EXPIRED_SKIPPING="Answer too long. Limit expired. Skipping."
 SP.JS_ARE_YOU_SURE_YOU_WANT_TO_DELETE_THIS_GROUP_ALL_VALUES_WITHIN_THIS_GROUP_WILL_BE_DELETED_TOO="Are you sure you want to delete this group? All values within this group will be deleted too!"
 SP.JS_PLEASE_SELECT_CATEGORY_YOU_WANT_TO_ADD_IN_THE_TREE_FIRST="Please select the category you want to add from the category tree first"
-SP.JS_THIS_CATEGORY_HAS_BEEN_ALREADY_ADDED="This category has already been added"
+SP.JS_THIS_CATEGORY_HAS_BEEN_ALREADY_ADDED="This category has already been added."
 SP.JS_SELECT_CATEGORIES="Select categories"
 SP.JS_PLEASE_ENTER_NEW_NAME_FOR_THE_TEMPLATE="Please enter a new name for the new template"
 SP.JS_SELECT_PARENT_CATEGORY="Select Parent Category"
 SP.JS_GRP_DEL_WARN="Are you sure you want to delete this group? All values within this group will be deleted too!"
-SP.JS_FD_TEXTAREA_LIMIT="You can input a maximum of var:[max_length] chars into this field"
+SP.JS_FD_TEXTAREA_LIMIT="You can input a maximum of var:[max_length] chars into this field."
 SP.JS_EDIT_FILTER="Edit Filter"
 SP.JS_DELETE_FILTER="Delete"
 SP.JS_PBY_NO="Please don't forget to donate! :)"
 SP.JS_CHECKING_FOR_UPDATES="Please wait, checking for updates ..."
-SP.JS_NO_REPO="Please add the URL of a repository first"
-SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories"
+SP.JS_NO_REPO="Please add the URL of a repository first."
+SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories."
