--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -43,11 +43,11 @@ SP.PAGE_NOT_FOUND="Page Not Found!"
 SP.ERRMSG.MEMLIMIT_LIMITED_ENTRIES="The number of displayed entries has been limited to %d due to memory limit."
 SP.CANNOT_INSTALL_EXT_MISSING="Cannot install extension. This extension requires %s %s."
 
-SP.ATTR_DOES_NOT_EXISTS="The attribute %s does not exist"
-SP.CALL_TO_UNDEFINED_CLASS_METHOD="Call to undefined method %s->%s"
-SP.CALL_TO_UNDEFINED_METHOD_S="Call to undefined method %s "
-SP.CANNOT_ACCESS_SCHEMA_DEF="Cannot access schema definition at '%s'"
-SP.CANNOT_ADD_NEW_PERMS="Cannot add new permission. Error: %s"
+SP.ATTR_DOES_NOT_EXISTS="The attribute %s does not exist."
+SP.CALL_TO_UNDEFINED_CLASS_METHOD="Call to undefined method %s->%s."
+SP.CALL_TO_UNDEFINED_METHOD_S="Call to undefined method %s."
+SP.CANNOT_ACCESS_SCHEMA_DEF="Cannot access schema definition at '%s'."
+SP.CANNOT_ADD_NEW_PERMS="Cannot add new permission. Error: %s."
 SP.CANNOT_CHANGE_FIELD_STATE="Cannot change field state. Db reports: %s."
 SP.CANNOT_CREATE_RULE_DB_ERR="Cannot create rule. Db reports: %s."
 SP.CANNOT_CREATE_SESSION_DB_ERR="Cannot create session. Db reports: %s."
@@ -97,7 +97,7 @@ SP.CANNOT_INSTALL_PLUGIN_DB_ERR="Cannot install new plugin. Db insert failed. Er
 SP.CANNOT_LOAD_CONFIG_VIEW="Cannot load config file for the view. File '%s' does not exist."
 SP.CANNOT_LOAD_FILE_AT="Cannot load file at '%s'."
 SP.CANNOT_LOAD_FILE_AT_NOT_READABLE="Cannot load file at %s. File does not exist or is not readable."
-SP.CANNOT_LOAD_PARSER="Cannot load '%s' parser"
+SP.CANNOT_LOAD_PARSER="Cannot load '%s' parser."
 SP.CANNOT_LOAD_TEMPLATE_AT="Cannot load template: %s."
 SP.CANNOT_LOAD_TEMPLATE_FILE_AT="Cannot load template file '%s'."
 SP.CANNOT_MOVE_DIRECTORY="Cannot move directory '%s' to '%s'."
@@ -122,7 +122,7 @@ SP.CANNOT_VALIDATE_SSL_CERT="Cannot validate SSL certificate. %s"
 SP.CANNOT_WRITE_TO_FILE_AT="Cannot write to file %s."
 SP.COULD_NOT_COPY_DIRECTORY="Could not copy directory %s to %s."
 SP.CREATE_IMAGE_MISSING_HANDLER="Cannot create image from the file %s. Missing handler function for image type %s."
-SP.CRITICAL_SECTION="Critical Section Violated"
+SP.CRITICAL_SECTION="Critical Section Violated!"
 SP.CURL_NOT_INSTALLED="Client URL Library is not installed."
 SP.DB_REPORTS_ERR="Db reports: %s."
 SP.ENTRY_DOES_NOT_EXIST="Entry %s does not exist."
@@ -146,26 +146,26 @@ SP.FUNCFILE_DEFINED_BUT_FILE_DOES_NOT_EXISTS="Functions file has been defined bu
 SP.IDENTIFIER_EXPECTED="Identifier expected for multi task."
 SP.INVALID_VALUES_FOR_RESAMPLE="Invalid values for resemble. Width: [%d] / Height: [%d]."
 SP.METHOD_DOES_NOT_EXISTS="Method %s does not exist."
-SP.MISSING_CATEGORY="Missing category"
-SP.MISSING_FILE_TO_SAVE_AT="Missing file to save %s"
-SP.NO_FILE_HAS_BEEN_UPLOADED="No file has been uploaded"
-SP.NO_INSTALL_FILE_IN_PACKAGE="No installation file has been found in the package"
-SP.NO_PROPERTY_TO_SHOW="No property to show"
-SP.NOT_ENOUGH_PARAMETERS="Not enough parameters"
-SP.SITE_NOT_FOUND_MISSING_PARAMS="Site not found. Missing parameters"
+SP.MISSING_CATEGORY="Missing category."
+SP.MISSING_FILE_TO_SAVE_AT="Missing file to save %s."
+SP.NO_FILE_HAS_BEEN_UPLOADED="No file has been uploaded."
+SP.NO_INSTALL_FILE_IN_PACKAGE="No installation file has been found in the package."
+SP.NO_PROPERTY_TO_SHOW="No property to show."
+SP.NOT_ENOUGH_PARAMETERS="Not enough parameters."
+SP.SITE_NOT_FOUND_MISSING_PARAMS="Site not found. Missing parameters."
 SP.SUCH_TASK_NOT_FOUND="Task not found: %s."
-SP.TASK_NOT_FOUND_WRONG_CLASS="Task not found: %s. Wrong class definition"
+SP.TASK_NOT_FOUND_WRONG_CLASS="Task not found: %s. Wrong class definition."
 SP.TEMPLATE_DOES_NOT_EXISTS="Template %s does not exist!"
-SP.TEMPLATE_INST_DUPLICATE="A template with the id '%s' is already installed. Please remove it first"
+SP.TEMPLATE_INST_DUPLICATE="A template with the id '%s' is already installed. Please remove it first."
 SP.THERE_IS_NO_SUCH_FIELD="There is no field with this id '%s'"
 SP.UNAUTHORIZED_ACCESS_TASK="Unauthorized Access Task: %s."
-SP.YOU_ARE_NOT_AUTH_TO_ADD_AN_ENTRY="You are not authorized to add an entry"
-SP.YOU_ARE_NOT_AUTH_TO_EDIT_THIS_ENTRY="You are not authorized to edit this entry"
-SP.UNAUTHORIZED_ACCESS="Unauthorized Access"
-SP.TASK_NOT_FOUND="Task not found"
+SP.YOU_ARE_NOT_AUTH_TO_ADD_AN_ENTRY="You are not authorized to add an entry."
+SP.YOU_ARE_NOT_AUTH_TO_EDIT_THIS_ENTRY="You are not authorized to edit this entry."
+SP.UNAUTHORIZED_ACCESS="Unauthorized Access."
+SP.TASK_NOT_FOUND="Task not found."
 SP.CANNOT_LOAD_TEMPLATE_FILE="Cannot load template file at %s"
 SP.CANNOT_PARSE_TEMPLATE_FILE="Cannot parse template file at %s"
 SP.CANNOT_GET_UPDATES="Cannot check for updates. Db reports: %s."
-SP.UPD_NO_REPOS_FOUND="Didn't found any repositories"
-SP.CANNOT_GET_NEWS="Cannot get news from %s. An error ( %d ) occurred."
+SP.UPD_NO_REPOS_FOUND="Haven't found any repositories."
+SP.CANNOT_GET_NEWS="Cannot get news from %s. An error (%d) occurred."
 SP.CANNOT_LOAD_NEWS="Cannot load news. Error: %s"
