--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
@@ -21,17 +21,17 @@
 ; $HeadURL$
 
 
-SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields"
+SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields!"
 SP.JS_ADD_ENTRY_FIELD_REQUIRED="$field is required. Please fill in all required fields."
-SP.JS_RED_HIGHLIGHTED_FIELD="Red highlighted field"
+SP.JS_RED_HIGHLIGHTED_FIELD="Highlighted field"
 SP.JS_CONNECTION_TIMED_OUT="Connection timed out."
 SP.JS_DONE="Done"
-SP.JS_PLEASE_SELECT_CATEGORY_YOU_WANT_TO_ADD_IN_THE_TREE_FIRST="Please select the category you want to add from the category tree first"
+SP.JS_PLEASE_SELECT_CATEGORY_YOU_WANT_TO_ADD_IN_THE_TREE_FIRST="Please select the category you want to add from the category tree first."
 SP.JS_THIS_CATEGORY_HAS_BEEN_ALREADY_ADDED="This category has already been added."
 SP.JS_SELECT_CATEGORIES="Select categories"
 SP.JS_FD_TEXTAREA_LIMIT="You can input a maximum of var:[max_length] chars into this field."
-SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories"
+SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories."
 SP.JS_ATTENTION="Attention!"
 SP.JS_CONFIRM_DELETE_ENTRY="Are you sure you want to delete this entry?"
 SP.JS_CONFIRM_URL_COUNT_RESET="Are you sure you want to reset the counter?"
-SP.JS_SELECT_CAT_WITH_NO_CHILDS="You cannot add an entry to a parent category. Please select a category which has no subcategories"
+SP.JS_SELECT_CAT_WITH_NO_CHILDS="You cannot add an entry to a parent category. Please select a category which has no subcategories."
