--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -21,8 +21,8 @@
 ; $HeadURL$
 
 
-SP.WARNING.NO_NAME_FIELD_SELECTED="<b>Warning</b>: Please select a name field for this section!"
-SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<b>Warning</b>: Some entries are missing base data. Please check the configuration."
+SP.WARNING.NO_NAME_FIELD_SELECTED="<strong>Warning</strong>: Please select a name field for this section!"
+SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<strong>Warning</strong>: Some entries are missing base data. Please check the configuration."
 SP.WARNING.EX.MSG_UPDATE_FIRST="The list of available applications is not available. Click on the 'Fetch Updates' button to get the list."
 SP.ACCELERATOR_ENABLED="SobiPro Data Accelerator is enabled."
 SP.ACCELERATOR_DISABLED="SobiPro Data Accelerator is disabled."
