--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -24,10 +24,10 @@
 ; SobiPro 1.1
 ;=========
 
-SP.INFO_DIFFERENT_LANGUAGE="<strong>Heads up!</strong> You are editing this %s in '%s' language. Please note, that all changes you make will be stored in this language!"
+SP.INFO_DIFFERENT_LANGUAGE="<strong>Heads up!</strong> You are editing this content (%s) in %s language. Please note, that all changes you make will be stored in this language!"
 
 SP.CRAWL_URL_PARSED_DONE="Done. Parsed %d links."
-SP.CRAWL_URL_PARSED_WORKING="Working... Parsed %d of %d sites in this loop."
+SP.CRAWL_URL_PARSED_WORKING="Working... Parsed %d of %d pages in this loop."
 
 ; Template texts
 SP.EXTENDED_SEARCH="Extended Search"
@@ -47,7 +47,7 @@ SP.ENTRY_MANAGE_DELETE="Delete Entry"
 
 SP.UL.TITLE="var:[user]'s entries"
 SP.UL.PATH_TITLE="var:[user]'s entries"
-SP.SITES_COUNTER="Site %d from %d"
+SP.SITES_COUNTER="Page %d of %d"
 
 SP.DL.PATH_TITLE_YEAR="Entries added in year var:[year]"
 SP.DL.PATH_TITLE_MONTH="Entries added in var:[month] of var:[year]"
@@ -173,10 +173,10 @@ SP.EN.IS_CHECKED_OUT="Entry '%s' is currently being edited by another user."
 SP.FD.DELETED="Field 'var:[field]' has been deleted."
 SP.FD.MAIL_EMAIL_ADDRESS="Email address"
 SP.FD.IMG_DELETE_CURRENT_IMAGE="Delete current image"
-SP.FD.SEARCH_SELECT_LIST=" -- Select var:[name]  -- "
-SP.FD.SEARCH_SELECT_LABEL=" -- select --- "
+SP.FD.SEARCH_SELECT_LIST=" --- Select var:[name] -- "
+SP.FD.SEARCH_SELECT_LABEL=" --- select --- "
 SP.FD.SELECT_OPTION_NAME="Option Name"
-SP.FD.INBOX_SEARCH_SELECT=" -- Select var:[name]  -- "
+SP.FD.INBOX_SEARCH_SELECT=" --- Select var:[name] --- "
 
 
 ;=========
@@ -188,24 +188,23 @@ SP.PN.START="Start"
 SP.PN.PREVIOUS="Previous"
 SP.PN.NEXT="Next"
 SP.PN.END="End"
-SP.PN.CURRENT_SITE="Site var:[current] of var:[pages]"
+SP.PN.CURRENT_SITE="Page var:[current] of var:[pages]"
 
 
 ;=========
 ; Search
 ;=========
-SP.SH.SEARCH_FOR_BOX="search..."
-SP.SH.SEARCH_FOUND_RESULTS="Found var:[count] result(s)"
-SP.SH.SEARCH_FOR="Search for"
+SP.SH.SEARCH_FOR_BOX="Enter keywords"
+SP.SH.SEARCH_FOUND_RESULTS="Found var:[count] result(s)!"
+SP.SH.SEARCH_FOR="Search Keywords"
 SP.SH.SEARCH_START="Start Search"
 SP.SH.START="Search"
 SP.SH.FIND_ENTRIES_THAT_HAVE="Find entries that have"
 SP.SH.FIND_ENTRIES_THAT_HAVE_ALL_WORDS="All words"
 SP.SH.FIND_ENTRIES_THAT_HAVE_ANY_WORDS="Any words"
-SP.SH.FIND_ENTRIES_THAT_HAVE_EXACT_PHRASE="Exact Phrase"
+SP.SH.FIND_ENTRIES_THAT_HAVE_EXACT_PHRASE="Exact words"
 SP.SH.TITLE="Search in var:[section]"
 SP.SH.PATH_TITLE="Search"
-; added 29 aug
 SP.SH.RANGE_FROM="From: "
 SP.SH.RANGE_TO="To: "
 SP.SH.SEARCH_SELECT_RANGE_FROM="var:[name] from"
