Langs und Beta 3

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
@@ -27,8 +27,8 @@ SP.REQ.MYSQL_FUNCTIONS_NOT_AVAILABLE="MySQL functions are not available."
 SP.REQ.MYSQL_FUNCTIONS_AVAILABLE="MySQL functions are available."
 SP.REQ.MYSQL_PROCEDURES_NOT_AVAILABLE="MySQL procedures are not available."
 SP.REQ.MYSQL_PROCEDURES_AVAILABLE="MySQL procedures are available."
-SP.REQ.MYSQL_WRONG_COLL="The required database collation has to be 'utf-8' But the database is using var:[collation] as collation."
-SP.REQ.MYSQL_COLL_OK="Using the recommended collation var:[collation]."
+SP.REQ.MYSQL_WRONG_COLL="The required database collation has to be 'utf-8'. But the database is using 'var:[collation]' as collation."
+SP.REQ.MYSQL_COLL_OK="Using the recommended collation 'var:[collation]'."
 SP.REQ.MYSQL_WRONG_VER="The required MySQL version is var:[required] but the installed version is var:[installed]."
 SP.REQ.MYSQL_NOT_REC_VER="The recommended MySQL version is var:[recommended] but the installed version is var:[installed]."
 SP.REQ.MYSQL_VERSION_OK="MySQL version is var:[installed]."
