--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -149,7 +149,7 @@ SP.NO_FILE_HAS_BEEN_UPLOADED="No file has been uploaded."
 SP.NO_INSTALL_FILE_IN_PACKAGE="No installation file has been found in the package."
 SP.NO_PROPERTY_TO_SHOW="No property to show."
 SP.NOT_ENOUGH_PARAMETERS="Not enough parameters."
-SP.SITE_NOT_FOUND_MISSING_PARAMS="Site not found. Missing parameters."
+SP.SITE_NOT_FOUND_MISSING_PARAMS="Page not found. Missing parameters."
 SP.SUCH_TASK_NOT_FOUND="Task not found: %s."
 SP.TASK_NOT_FOUND_WRONG_CLASS="Task not found: %s. Wrong class definition."
 SP.TEMPLATE_DOES_NOT_EXISTS="Template %s does not exist!"
