irgendwie ist dieser Text abhanden gekommen

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
@@ -30,4 +30,4 @@ SP.ABOUT.CREDITS_PANE="Credits"
 SP.ABOUT.LICENSE_PANE="License Conditions"
 SP.ABOUT.NEWS_PANE="News - %s"
 SP.ABOUT.SP_CLUB="The SobiPro Club"
-SP.ABOUT.SP_CLUBDESC="If you require support and additional applications for your directory the %s is what you are looking for. For a periodic subscription fee the Club Membership grants you access to the documentation, additional applications/extensions and to the %s."
+SP.ABOUT.SP_CLUBDESC="If you require support and additional applications for your directory the %s is what you are looking for. The Club Membership grants you access to the documentation, additional applications and to the %s."
