(#) Bug #858 SPHtml_Input::radioList does not accept '0' as label

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -27,6 +27,14 @@ Legend:
  (!) - Change
 
 -------------------
+1.1.0 Beta3? ()
+-------------------
+
+   (+)
+
+   (#) Shifted arguments in URL field for the SPRequest::word call (Issue #861)
+
+-------------------
 1.1.0 Beta2 (15 April 2013)
 -------------------
 
