--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -30,10 +30,12 @@ Legend:
 1.1.0 Beta3? ()
 -------------------
 
-   (+) Codemirror - added support for less
+   (+)
 
    (#) Shifted arguments in URL field for the SPRequest::word call (Issue #861)
    (#) Narrowing search down, when there was no results from previous search acts as there were no other search params
+   (#) Scroll bar for template tree added and overflow hidden removed (Issue )
+   (#) Overflow hidden removed for SigsiuTree (Issue )
 
 -------------------
 1.1.0 Beta2 (15 April 2013)
