(!) Removing Joomla! 3.1 canonical (a bit dirty solution)

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -33,6 +33,7 @@ Legend:
    (+) Codemirror - added support for less
 
    (!) Default textarea width reduced
+   (!) Removing Joomla! 3.1 canonical (a bit dirty solution)
 
    (#) Shifted arguments in URL field for the SPRequest::word call (Issue #861)
    (#) Narrowing search down, when there was no results from previous search acts as there were no other search params
@@ -40,6 +41,7 @@ Legend:
    (#) Overflow hidden removed for SigsiuTree (Issue )
    (#) Some XML attributes in administrator templates are being translated by default (Issue #865)
    (#) Joomla! icon font was overwritten in frontend (J!3 only)
+
 
 -------------------
 1.1.0 Beta2 (15 April 2013)
