--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -31,6 +31,7 @@ Legend:
 -------------------
 
    (+) Codemirror - added support for less
+   (+) Extended the search.suggest task with a possibility to select a particular field for the search
 
    (!) Default textarea width reduced
    (!) Removing Joomla! 3.1 canonical (a bit dirty solution)
