--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -248,6 +248,7 @@ SP.FIELD.TYPE_OPTG_PREDEFINED_MULTI_DATA_SINGLE_CHOICE="Multiple predefinied dat
 SP.PREDEFINED_MULTI_DATA_SINGLE_CHOICE="Predefined multi data single choice"
 SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_SINGLE_CHOICE_SELECT="Single select list"
 SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_SINGLE_CHOICE_RADIO="Radio buttons"
+SP.FM.INI_WARNING="<strong>Heads up!</strong> There are reserved words which must not be used as the key (the part left of the equal sign). These include: null, yes, no, true, false, on, off, none."
 
 ; Fields
 SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option Ids are used several times; a random option Id has been generated."
