--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -30,7 +30,7 @@ Legend:
 1.1.0 Beta3 (10 May 2013)
 -------------------
 
-   (+) Added support for less in Codemirror
+   (+) Added support for LESS in Codemirror
    (+) Extended the search.suggest task with the possibility to select a particular field for the search
    (+) Added message with reserved words to fields defining ini-file format lists
 
