--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -26,6 +26,12 @@ Legend:
  (-) - Removed
  (!) - Change
 
+1.1.0 Beta3 (10 May 2013)
+-------------------
+
+   (#) Fixed language code replacement for the section crawler (Issue #890)
+
+
 -------------------
 1.1.0 Beta3 (10 May 2013)
 -------------------
