--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -32,7 +32,7 @@ Legend:
 
    (#) Fixed language code replacement for the section crawler (Issue #890)
    (#) Fixed missing parent id in entry
-   (#) Fixed installation of clean version on J!1.5
+   (#) Fixed installation of clean and full version on J!1.5
 
 
 -------------------
