--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -35,6 +35,7 @@ Legend:
    (#) Non-unicode aliases (Issue #901)
    (#) Fixed installation of clean and full version on J!1.5
    (#) Fixed wrong path replacement on Windows (Issue #891)
+   (#) Some complex parameters aren't transferred to a string while editing configuration (Issue #894)
 
 
 -------------------
