--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -36,6 +36,7 @@ Legend:
    (#) Fixed installation of clean and full version on J!1.5
    (#) Fixed wrong path replacement on Windows (Issue #891)
    (#) Some complex parameters aren't transferred to a string while editing configuration (Issue #894)
+   (#) Added AfterGetEntries trigger in the Alpha Listing Controller
 
 
 -------------------
