--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -46,6 +46,7 @@ Legend:
    (#) While in section/category view in administrator area, the "All Entries" menu is highlighted as active
    (#) XML parser was generating Itemid for all loops in administrator area
    (#) Changed attr method to prop in serial actions (interface.js) as jQuery 1.10 returns "unknown" for the "checked" attribute
+   (#) No label for objects (section drop'n'down menu e.g) when it has been stored in a "dead" language
 
 
 -------------------
