--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -34,7 +34,7 @@ Legend:
    (!) Bootstrap CSS updated to version 2.3.2
    (!) Font Awesome updated to version 3.1.0/3.1.1
    (!) JQuery updated to v1.10.1
-   (!) Added an optional parameter into SPJoomlaLang::replacePlaceHolders for removing empty placeholders
+   (!) Optional parameter added to SPJoomlaLang::replacePlaceHolders to remove empty placeholders
 
    (#) Fixed language code replacement for the section crawler (Issue #890)
    (#) Fixed missing parent id in entry
@@ -47,7 +47,7 @@ Legend:
    (#) While in section/category view in administrator area, the "All Entries" menu is highlighted as active
    (#) XML parser was generating Itemid for all loops in administrator area
    (#) Changed attr method to prop in serial actions (interface.js) as jQuery 1.10 returns "unknown" for the "checked" attribute
-   (#) No label for objects (section drop'n'down menu e.g) when it has been stored in a "dead" language
+   (#) No label for objects (e.g. section drop'n'down menu) when it has been stored in a "dead" language
 
 
 -------------------
