Larger CSS files are minimised now

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -30,7 +30,7 @@ Legend:
 1.1.0 (28 June 2013)
 -------------------
 
-   (!) Larger JS files are minimised now
+   (!) Larger JS and CSS files are minimised now
    (!) Bootstrap CSS updated to version 2.3.2
    (!) Font Awesome updated to version 3.1.0/3.1.1
    (!) JQuery updated to v1.10.1
