--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -166,3 +166,4 @@ SP.CANNOT_GET_UPDATES="Cannot check for updates. Db reports: %s."
 SP.UPD_NO_REPOS_FOUND="Haven't found any repositories."
 SP.CANNOT_GET_NEWS="Cannot get news from %s. An error (%d) occurred."
 SP.CANNOT_LOAD_NEWS="Cannot load news. Error: %s"
+SP.REPO_ERR_APP_DISABLED="This Application is disabled and cannot be installed"
