--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -21,6 +21,7 @@
 ; $HeadURL$
 
 
+SP.REPO_ERR_APP_DISABLED="This application is disabled and cannot be installed."
 SP.CANNOT_CREATE_CACHE_DIRECTORY="Cannot create temporary cache directory!"
 SP.CANNOT_UPLOAD_FILE_TO="Cannot upload file to %s."
 SP.CANNOT_CREATE_DIR="Cannot create directory at %s."
@@ -166,4 +167,3 @@ SP.CANNOT_GET_UPDATES="Cannot check for updates. Db reports: %s."
 SP.UPD_NO_REPOS_FOUND="Haven't found any repositories."
 SP.CANNOT_GET_NEWS="Cannot get news from %s. An error (%d) occurred."
 SP.CANNOT_LOAD_NEWS="Cannot load news. Error: %s"
-SP.REPO_ERR_APP_DISABLED="This Application is disabled and cannot be installed"
