(#) Checkbox group and radio fields aren't properly validated due to exception in validation method (Issue #910)

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -49,6 +49,7 @@ Legend:
    (#) Changed attr method to prop in serial actions (interface.js) as jQuery 1.10 returns "unknown" for the "checked" attribute
    (#) No label for objects (e.g. section drop'n'down menu) when it has been stored in a "dead" language
    (#) Disabled core update button was clickable
+   (#) Checkbox group and radio fields aren't properly validated due to exception in validation method (Issue #910)
 
 
 -------------------
